// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";

enum IamAlphaWorkloadIdentityPoolStateEnum {
  IamAlphaWorkloadIdentityPoolStateEnumNO_VALUE_DO_NOT_USE = 0;
  IamAlphaWorkloadIdentityPoolStateEnumSTATE_UNSPECIFIED = 1;
  IamAlphaWorkloadIdentityPoolStateEnumACTIVE = 2;
  IamAlphaWorkloadIdentityPoolStateEnumDELETED = 3;
}

message IamAlphaWorkloadIdentityPool {
  string name = 1;
  string display_name = 2;
  string description = 3;
  IamAlphaWorkloadIdentityPoolStateEnum state = 4;
  bool disabled = 5;
  string project = 6;
  string location = 7;
}

message ApplyIamAlphaWorkloadIdentityPoolRequest {
  IamAlphaWorkloadIdentityPool resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteIamAlphaWorkloadIdentityPoolRequest {
  string service_account_file = 1;
  IamAlphaWorkloadIdentityPool resource = 2;
}

message ListIamAlphaWorkloadIdentityPoolRequest {
  string service_account_file = 1;
	IamAlphaWorkloadIdentityPool resource = 2;
}

message ListIamAlphaWorkloadIdentityPoolResponse {
  repeated IamAlphaWorkloadIdentityPool items = 1;
}

service IamAlphaWorkloadIdentityPoolService {
  rpc ApplyIamAlphaWorkloadIdentityPool(ApplyIamAlphaWorkloadIdentityPoolRequest) returns (IamAlphaWorkloadIdentityPool);
  rpc DeleteIamAlphaWorkloadIdentityPool(DeleteIamAlphaWorkloadIdentityPoolRequest) returns (google.protobuf.Empty);
  rpc ListIamAlphaWorkloadIdentityPool(ListIamAlphaWorkloadIdentityPoolRequest) returns (ListIamAlphaWorkloadIdentityPoolResponse);
}
